# talk-with-me

./: .gitignore  Dockerfile  README.md  app.py  config.py  notifications.py  profile_meta.py  pyproject.toml
.github/workflows/: deploy.yml
agent/: __init__.py  cyborg.py  prompts.py  rag.py
api/: models.py  routes.py
auth/: __init__.py  oauth.py  routes.py  session.py
db/: __init__.py  database.py  queries.py
frontend/: index.html  projects.html
frontend/css/: projects.css  styles.css
frontend/js/: chat.js  projects.js
profile/: projects.json  summary.txt
tools/: __init__.py  functions.py  schemas.py
