[project]
name = "talk_with_me"
version = "1.0.0"
description = "Personal AI assistant — FastAPI backend + vanilla JS frontend"
requires-python = ">=3.12"
dependencies = [
    # Web framework + server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiofiles>=23.2.1",
    "python-multipart>=0.0.9",
    # LLM client
    "openai>=1.68.0",
    # HTTP client — used for OAuth token exchange
    "httpx>=0.27.0",
    # Profile context loading
    "pypdf>=5.4.0",
    # Notifications
    "requests>=2.32.0",
    # Environment variables
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",    # for testing FastAPI endpoints
    "ipykernel>=6.29.5",
]
